image added into home page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         
     </head>
     <body>
+        <img sre="image/img""
         <h1>This is home page</h1>
         <p>This is content</p>
     </body>
